[package]
name = "tla2528"
version = "0.1.0"
edition = "2024"

[dependencies]
bilge = "0.3.0"
critical-section = { version = "1.2.0", optional = true }
portable-atomic = { version = "1.11.1", optional = true }
embedded-hal = "1.0.0"
mutually_exclusive_features = "0.1.0"

[features]
default = ["gpio", "gpio_critical_section"]
gpio = []
gpio_critical_section = ["critical-section"]
gpio_atomic = ["portable-atomic"]
